unpackaged/main/default/objects/Entitlement/fields/Case_Routing_Method__c.field-meta.xml
<CustomField>
    <fullName>Case_Routing_Method__c</fullName>
    <label>Case Routing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Support_Case_Routing_Methods</valueSetName>
    </valueSet>
</CustomField>