unpackaged/main/default/objects/Entitlement/fields/Includes_Slack__c.field-meta.xml
<CustomField>
    <fullName>Includes_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Slack?</label>
    <type>Checkbox</type>
</CustomField>