unpackaged/main/default/objects/Entitlement/fields/Priority_Index__c.field-meta.xml
<CustomField>
    <fullName>Priority_Index__c</fullName>
    <label>Priority Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>