unpackaged/main/default/objects/Entitlement/fields/Support_SLA__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support SLA</label>
    <referenceTo>Support_SLA__c</referenceTo>
    <relationshipLabel>Entitlements</relationshipLabel>
    <relationshipName>Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>