unpackaged/main/default/objects/Entitlement/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Support_Tiers</valueSetName>
    </valueSet>
</CustomField>